// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignTransaction render should change submit button text if loading and make it disabled 1`] = `
<form data-test="sign-form">
  <!---->
  <form-field-stub><a href="http://localhost" data-test="requester-url">http://localhost</a>
    requests sign action.
  </form-field-stub>
  <form-field-stub label="Requires request sign by:">
    <message-stub ellipsis="true" data-test="account-address">
      0xaEF74e25181b0879d293396Dd9949Cf25b339407
    </message-stub>
  </form-field-stub>
  <form-field-stub label="Your account password:">
    <v-input-stub value="" placeholder="Enter your password..." name="password" type="password"></v-input-stub>
  </form-field-stub>
  <div data-test="sign-form-transaction-params">
    <form-field-stub label="To">
      <p class="message ellipsis">

      </p>
    </form-field-stub>
    <form-field-stub label="Value">
      <v-input-stub value="0" disabled="true" name="value" type="number"></v-input-stub>
    </form-field-stub>
    <!---->
    <form-field-stub label="Gas price (in gwei)">
      <v-input-stub value="0" name="gasPrice" type="number" min="0" step="1"></v-input-stub>
    </form-field-stub>
    <!---->
    <form-field-stub label="Gas limit">
      <v-input-stub value="0" name="gasLimit" type="number" min="0"></v-input-stub>
    </form-field-stub>
  </div>
  <form-controls-stub>
    <v-button-stub skin="quaternary" size="normal" disabled="true" type="button" data-test="cancel-button">
      Close
    </v-button-stub>
    <v-button-stub skin="primary" size="normal" disabled="true" type="button" data-test="submit-button">
      Loading...
    </v-button-stub>
  </form-controls-stub>
</form>
`;

exports[`SignTransaction render should correctly render SignTransaction component 1`] = `
<form data-test="sign-form">
  <!---->
  <form-field-stub><a href="http://localhost" data-test="requester-url">http://localhost</a>
    requests sign action.
  </form-field-stub>
  <form-field-stub label="Requires request sign by:">
    <message-stub ellipsis="true" data-test="account-address">
      0xaEF74e25181b0879d293396Dd9949Cf25b339407
    </message-stub>
  </form-field-stub>
  <form-field-stub label="Your account password:">
    <v-input-stub value="" placeholder="Enter your password..." name="password" type="password"></v-input-stub>
  </form-field-stub>
  <div data-test="sign-form-transaction-params">
    <form-field-stub label="To">
      <p class="message ellipsis">

      </p>
    </form-field-stub>
    <form-field-stub label="Value">
      <v-input-stub value="0" disabled="true" name="value" type="number"></v-input-stub>
    </form-field-stub>
    <!---->
    <form-field-stub label="Gas price (in gwei)">
      <v-input-stub value="0" name="gasPrice" type="number" min="0" step="1"></v-input-stub>
    </form-field-stub>
    <form-field-stub>
      <v-content-switcher-stub items="[object Object],[object Object],[object Object]"></v-content-switcher-stub>
    </form-field-stub>
    <form-field-stub label="Gas limit">
      <v-input-stub name="gasLimit" type="number" min="0"></v-input-stub>
    </form-field-stub>
  </div>
  <form-controls-stub>
    <v-button-stub skin="quaternary" size="normal" type="button" data-test="cancel-button">
      Close
    </v-button-stub>
    <v-button-stub skin="primary" size="normal" type="button" data-test="submit-button" disabled="true">
      Sign
    </v-button-stub>
  </form-controls-stub>
</form>
`;
